mealie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
     annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  rules:
    - host: mealie.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-service
                port:
                  number: 80
